--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
   <meta name="robots" content="index,follow" />
   <meta name="theme-color" content="#0b1220" />
 
-  <!-- Open Graph / Twitter -->
+  <!-- Social -->
   <meta property="og:type" content="website" />
   <meta property="og:title" content="About — System & Flow" />
   <meta property="og:description" content="Built by project managers, for project managers." />
@@ -33,7 +33,6 @@
   <link rel="stylesheet" href="/styles.css" />
 
   <!-- GA -->
-  <link rel="preconnect" href="https://www.googletagmanager.com" crossorigin />
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-1FRFWG4X18"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
@@ -41,20 +40,12 @@
     gtag('js', new Date());
     gtag('config', 'G-1FRFWG4X18');
   </script>
-
-  <style>
-    /* Page-specific light touches */
-    .about-wrap{max-width:820px}
-    .newsletter-form{display:flex;gap:10px;flex-wrap:wrap;margin-top:10px}
-    .newsletter-form input[type="email"]{flex:1;min-width:240px;padding:12px;border-radius:12px;border:1px solid var(--border);background:var(--card);color:var(--ink)}
-    .newsletter-form .actions{display:flex;align-items:center}
-    #about-wait-ok{display:none;margin-top:10px}
-  </style>
 </head>
 
 <body>
   <a class="skip-link" href="#main">Skip to content</a>
 
+  <!-- Header -->
   <header class="site-header">
     <div class="container">
       <a class="brand" href="/"><img src="/assets/img/logo.png" alt="System & Flow logo" /></a>
@@ -73,9 +64,9 @@
   <main id="main">
     <!-- Hero -->
     <section class="hero">
-      <div class="container">
+      <div class="container" style="text-align:center">
         <h1>Built by PMs, for PMs</h1>
-        <p class="small" style="max-width:720px">
+        <p class="small sub">
           We’re project managers who wanted fewer clicks, clearer status, and tools that don’t fight you.
         </p>
       </div>
@@ -83,7 +74,7 @@
 
     <!-- Body -->
     <section class="section">
-      <div class="container about-wrap">
+      <div class="container" style="max-width:820px">
         <h2 style="margin-top:0">Why System &amp; Flow</h2>
         <p>
           Most PM tools are heavy. We prefer fast, focused apps that do one job beautifully—turn a messy meeting into decisions,
@@ -99,85 +90,88 @@
         </ul>
 
         <h2>Stay in the loop</h2>
-        <form id="about-wait" action="https://formspree.io/f/mzzvlwqy" method="POST" class="newsletter-form" novalidate>
+        <form id="about-wait" action="https://formspree.io/f/mzzvlwqy" method="POST" class="newsletter-form" aria-label="Join the newsletter" novalidate>
           <label class="sr-only" for="about-email">Email</label>
           <input id="about-email" type="email" name="email" required placeholder="Email for early access & updates" />
           <input type="hidden" name="_subject" value="About page signup — systemnflow.com" />
+          <label class="consent">
+            <input type="checkbox" name="marketing_consent" required /> I agree to receive emails.
+          </label>
           <div class="actions">
             <button class="button primary" type="submit">Join</button>
           </div>
         </form>
-        <div id="about-wait-ok" class="small" role="status" aria-live="polite">✅ You’re on the list.</div>
-        <p class="small" style="margin-top:8px;color:var(--muted)">
+        <div id="about-wait-ok" class="success" role="status" aria-live="polite">✅ You’re on the list.</div>
+        <p class="small muted" style="margin-top:8px">
           We’ll email occasionally with launch updates and early access invites. Unsubscribe anytime.
         </p>
       </div>
     </section>
   </main>
 
-  <footer class="site-footer">
-    <div class="container footer-grid">
-      <div>
-        <img class="footer-logo" src="/assets/img/logo.png" alt="System & Flow" />
-        <p class="small">Project management toolkits & AI prompts.</p>
+  <!-- Footer (compact) -->
+  <footer class="footer-min">
+    <div class="container">
+      <div class="foot-left">
+        <img class="logo-icon" src="/assets/img/logo.png" alt="System &amp; Flow" />
+        <span class="brand">System &amp; Flow</span>
+        <span class="divider">•</span>
+        <span class="tagline">Project management toolkits &amp; AI prompts.</span>
       </div>
-      <nav aria-label="Footer">
-        <ul class="footer-nav">
-          <li><a href="/">Home</a></li>
-          <li><a href="/apps.html">Apps</a></li>
-          <li><a href="/about.html">About</a></li>
-          <li><a href="/contact.html">Contact</a></li>
-          <li><a href="https://systemnflow.gumroad.com">Store</a></li>
-        </ul>
-      </nav>
-      <div class="social">
-        <a href="https://www.instagram.com/systemnflow" aria-label="Instagram">@systemnflow</a>
-        <a href="https://www.tiktok.com/@systemnflow" aria-label="TikTok">@systemnflow</a>
-        <a href="https://www.pinterest.com/systemnflow" aria-label="Pinterest">Pinterest</a>
-        <a href="https://www.youtube.com/@Systemnflow" aria-label="YouTube">YouTube</a>
-        <a href="https://www.linkedin.com/company/system-and-flow" aria-label="LinkedIn">LinkedIn</a>
+      <div class="foot-right">
+        <a href="/">Home</a>
+        <a href="/apps.html">Apps</a>
+        <a href="/contact.html">Contact</a>
+        <a href="https://systemnflow.gumroad.com">Store</a>
+        <a href="https://www.youtube.com/@Systemnflow">YouTube</a>
+        <a href="https://www.linkedin.com/company/system-and-flow">LinkedIn</a>
       </div>
     </div>
-    <div class="container legal small">
-      © <span id="y"></span> System & Flow™. All rights reserved.
-    </div>
+    <div class="legal small">© <span id="y"></span> System &amp; Flow™. All rights reserved.</div>
   </footer>
 
+  <!-- Scripts -->
   <script>
     // year
     document.getElementById('y').textContent = new Date().getFullYear();
 
     // mobile nav
-    const btn = document.querySelector('.nav-toggle');
-    const nav = document.getElementById('nav');
-    if (btn && nav) {
+    (function () {
+      const btn = document.querySelector('.nav-toggle');
+      const nav = document.getElementById('nav');
+      if (!btn || !nav) return;
       btn.addEventListener('click', () => {
         const open = btn.getAttribute('aria-expanded') === 'true';
         btn.setAttribute('aria-expanded', String(!open));
         nav.classList.toggle('open');
       });
-    }
+    })();
 
     // newsletter ajax
-    const form = document.getElementById('about-wait');
-    const ok = document.getElementById('about-wait-ok');
-    if (form) {
+    (function () {
+      const form = document.getElementById('about-wait');
+      const ok = document.getElementById('about-wait-ok');
+      if (!form) return;
       form.addEventListener('submit', async (e) => {
         e.preventDefault();
-        const r = await fetch(form.action, {
-          method: 'POST',
-          body: new FormData(form),
-          headers: { 'Accept': 'application/json' }
-        });
-        if (r.ok) {
-          form.style.display = 'none';
-          ok.style.display = 'block';
-          if (window.gtag) gtag('event', 'newsletter_signup', { source: 'about' });
-        } else {
-          alert('Please try again.');
+        try {
+          const r = await fetch(form.action, {
+            method: 'POST',
+            body: new FormData(form),
+            headers: { 'Accept': 'application/json' }
+          });
+          if (r.ok) {
+            form.style.display = 'none';
+            if (ok) ok.style.display = 'block';
+            if (window.gtag) gtag('event', 'newsletter_signup', { source: 'about' });
+          } else {
+            alert('Please try again.');
+          }
+        } catch {
+          alert('Network error. Please try again.');
         }
       });
-    }
+    })();
   </script>
 </body>
 </html>
